--- a/X7Pro_Driver.ioc
+++ b/X7Pro_Driver.ioc
@@ -201,15 +201,10 @@ Dma.UART7_TX.5.SyncEnable=DISABLE
 Dma.UART7_TX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.UART7_TX.5.SyncRequestNumber=1
 Dma.UART7_TX.5.SyncSignalID=NONE
-FREERTOS.FootprintOK=true
-FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,FootprintOK,INCLUDE_vTaskDelayUntil,configUSE_NEWLIB_REENTRANT,configENABLE_FPU,configUSE_TIMERS,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE
-FREERTOS.Tasks01=defaultTask,0,2048,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
-FREERTOS.configENABLE_FPU=1
-FREERTOS.configTOTAL_HEAP_SIZE=0x40000
-FREERTOS.configUSE_NEWLIB_REENTRANT=1
-FREERTOS.configUSE_TIMERS=1
+FDCAN1.CalculateBaudRateNominal=1250000
+FDCAN1.CalculateTimeBitNominal=800
+FDCAN1.CalculateTimeQuantumNominal=160.0
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -221,104 +216,99 @@ Mcu.IP10=SPI6
 Mcu.IP11=SYS
 Mcu.IP12=TIM5
 Mcu.IP13=UART7
+Mcu.IP14=USB_DEVICE
+Mcu.IP15=USB_OTG_FS
 Mcu.IP2=DEBUG
 Mcu.IP3=DMA
-Mcu.IP4=FREERTOS
+Mcu.IP4=FDCAN1
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
 Mcu.IP7=SDMMC1
 Mcu.IP8=SPI1
 Mcu.IP9=SPI4
-Mcu.IPNb=14
+Mcu.IPNb=16
 Mcu.Name=STM32H743XIHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PC10
-Mcu.Pin1=PA15 (JTDI)
+Mcu.Pin1=PI0
 Mcu.Pin10=PD7
 Mcu.Pin11=PC12
 Mcu.Pin12=PA13 (JTMS/SWDIO)
-Mcu.Pin13=PE5
-Mcu.Pin14=PE3
-Mcu.Pin15=PG13
-Mcu.Pin16=PD2
+Mcu.Pin13=PB9
+Mcu.Pin14=PG13
+Mcu.Pin15=PD2
+Mcu.Pin16=PA9
 Mcu.Pin17=PE6
 Mcu.Pin18=PC8
 Mcu.Pin19=PC9
-Mcu.Pin2=PI0
-Mcu.Pin20=PG7
-Mcu.Pin21=PF2
+Mcu.Pin2=PG11
+Mcu.Pin20=PA12
+Mcu.Pin21=PA11
 Mcu.Pin22=PH1-OSC_OUT (PH1)
 Mcu.Pin23=PH0-OSC_IN (PH0)
 Mcu.Pin24=PF6
-Mcu.Pin25=PF10
-Mcu.Pin26=PH10
-Mcu.Pin27=PH11
-Mcu.Pin28=PA6
-Mcu.Pin29=PA7
-Mcu.Pin3=PG11
-Mcu.Pin30=PB2
-Mcu.Pin31=PH12
-Mcu.Pin32=PE8
-Mcu.Pin33=PE13
-Mcu.Pin34=PE7
-Mcu.Pin35=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin36=VP_SYS_VS_tim1
-Mcu.Pin37=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin38=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
-Mcu.Pin4=PC11
-Mcu.Pin5=PA14 (JTCK/SWCLK)
+Mcu.Pin25=PH10
+Mcu.Pin26=PH11
+Mcu.Pin27=PA6
+Mcu.Pin28=PA7
+Mcu.Pin29=PH12
+Mcu.Pin3=PC11
+Mcu.Pin30=PE8
+Mcu.Pin31=PE13
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin34=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin35=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
+Mcu.Pin4=PA14 (JTCK/SWCLK)
+Mcu.Pin5=PH14
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PC14-OSC32_IN (OSC32_IN)
 Mcu.Pin8=PE2
 Mcu.Pin9=PG12
-Mcu.PinsNb=39
+Mcu.PinsNb=36
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.3.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32H743XIHx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
-NVIC.BDMA_Channel0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
-NVIC.BDMA_Channel1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.DMA1_Stream4_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI9_5_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
+NVIC.BDMA_Channel0_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.BDMA_Channel1_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream3_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream4_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.PendSV_IRQn=true\:15\:0\:true\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SDMMC1_IRQn=true\:5\:0\:false\:false\:false\:true\:true\:true\:true
-NVIC.SPI1_IRQn=true\:5\:0\:false\:false\:false\:true\:true\:true\:true
-NVIC.SPI4_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
-NVIC.SPI6_IRQn=true\:5\:0\:false\:false\:false\:true\:false\:true\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
-NVIC.SavedPendsvIrqHandlerGenerated=true
-NVIC.SavedSvcallIrqHandlerGenerated=true
-NVIC.SavedSystickIrqHandlerGenerated=true
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM1_UP_IRQn
-NVIC.TimeBaseIP=TIM1
-NVIC.UART7_IRQn=true\:5\:0\:false\:false\:false\:true\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.SDMMC1_IRQn=true\:5\:0\:true\:false\:false\:true\:true\:false
+NVIC.SPI1_IRQn=true\:5\:0\:true\:false\:false\:true\:true\:false
+NVIC.SPI4_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.SPI6_IRQn=true\:5\:0\:true\:false\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.UART7_IRQn=true\:5\:0\:true\:false\:false\:true\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA11.GPIOParameters=GPIO_Speed
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Speed
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA15\ (JTDI).GPIOParameters=PinState,GPIO_Label,PinAttribute
-PA15\ (JTDI).GPIO_Label=ICM42688P_CS
-PA15\ (JTDI).Locked=true
-PA15\ (JTDI).PinAttribute=Free
-PA15\ (JTDI).PinState=GPIO_PIN_SET
-PA15\ (JTDI).Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Speed
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
@@ -327,8 +317,10 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI6_MOSI
-PB2.Locked=true
-PB2.Signal=GPIO_Input
+PA9.Mode=Activate_VBUS
+PA9.Signal=USB_OTG_FS_VBUS
+PB9.Mode=FDCAN_Activate
+PB9.Signal=FDCAN1_TX
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDMMC1_D2
 PC11.Mode=SD_4_bits_Wide_bus
@@ -356,44 +348,14 @@ PE13.Signal=SPI4_MISO
 PE2.Locked=true
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
-PE3.GPIOParameters=PinState,GPIO_Label
-PE3.GPIO_Label=SENSORS_SW
-PE3.Locked=true
-PE3.PinState=GPIO_PIN_SET
-PE3.Signal=GPIO_Output
-PE5.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultOutputPP
-PE5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PE5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PE5.Locked=true
-PE5.Signal=GPIO_Output
 PE6.Locked=true
 PE6.Mode=Full_Duplex_Master
 PE6.Signal=SPI4_MOSI
-PE7.GPIOParameters=GPIO_ModeDefaultEXTI
-PE7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PE7.Locked=true
-PE7.Signal=GPXTI7
 PE8.GPIOParameters=GPIO_Speed
 PE8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
-PF10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP,PinAttribute
-PF10.GPIO_Label=ADI_CS
-PF10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PF10.GPIO_PuPd=GPIO_PULLUP
-PF10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF10.Locked=true
-PF10.PinAttribute=Free
-PF10.PinState=GPIO_PIN_SET
-PF10.Signal=GPIO_Output
-PF2.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,PinAttribute
-PF2.GPIO_Label=RM3100
-PF2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PF2.Locked=true
-PF2.PinAttribute=Free
-PF2.PinState=GPIO_PIN_SET
-PF2.Signal=GPIO_Output
 PF6.GPIOParameters=GPIO_Speed,PinAttribute
 PF6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF6.Locked=true
@@ -413,11 +375,6 @@ PG12.Signal=SPI6_MISO
 PG13.Locked=true
 PG13.Mode=Full_Duplex_Master
 PG13.Signal=SPI6_SCK
-PG7.GPIOParameters=PinState,GPIO_Label
-PG7.GPIO_Label=SDEN
-PG7.Locked=true
-PG7.PinState=GPIO_PIN_SET
-PG7.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).PinAttribute=Free
@@ -436,6 +393,8 @@ PH11.PinAttribute=Free
 PH11.Signal=S_TIM5_CH2
 PH12.Locked=true
 PH12.Signal=S_TIM5_CH3
+PH14.Mode=FDCAN_Activate
+PH14.Signal=FDCAN1_RX
 PI0.Locked=true
 PI0.Signal=S_TIM5_CH4
 PinOutPanel.CurrentBGAView=Top
@@ -452,7 +411,7 @@ ProjectManager.DeviceId=STM32H743XIHx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.10.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x1000
+ProjectManager.HeapSize=0x20000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -463,11 +422,11 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=X7Pro_Driver.ioc
 ProjectManager.ProjectName=X7Pro_Driver
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x1000
+ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_DMA_Init-DMA-true-LL-true,4-MX_UART7_Init-UART7-true-LL-true,5-MX_BDMA_Init-BDMA-true-LL-true,6-MX_SPI4_Init-SPI4-true-LL-true,7-MX_SPI6_Init-SPI6-true-LL-true,8-MX_SPI1_Init-SPI1-true-LL-true,9-MX_TIM5_Init-TIM5-true-LL-true,10-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-true-HAL-true,3-MX_DMA_Init-DMA-true-LL-true,4-MX_UART7_Init-UART7-true-LL-true,5-MX_BDMA_Init-BDMA-true-LL-true,6-MX_SPI4_Init-SPI4-true-LL-true,7-MX_SPI6_Init-SPI6-true-LL-true,8-MX_SPI1_Init-SPI1-true-LL-true,9-MX_TIM5_Init-TIM5-true-LL-true,10-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-true-HAL-false,12-MX_FDCAN1_Init-FDCAN1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=200000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -515,7 +474,7 @@ RCC.HRTIMFreq_Value=200000000
 RCC.HSE_VALUE=16000000
 RCC.I2C123Freq_Value=100000000
 RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
@@ -548,15 +507,14 @@ RCC.Tim2OutputFreq_Value=200000000
 RCC.TraceFreq_Value=200000000
 RCC.USART16Freq_Value=100000000
 RCC.USART234578Freq_Value=100000000
-RCC.USBFreq_Value=100000000
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
+RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=800000000
 RCC.VCO2OutputFreq_Value=400000000
 RCC.VCO3OutputFreq_Value=160000000
 RCC.VCOInput1Freq_Value=4000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=8000000
-SH.GPXTI7.0=GPIO_EXTI7
-SH.GPXTI7.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
@@ -606,12 +564,18 @@ TIM5.Period=9999
 TIM5.Prescaler=4999
 UART7.BaudRate=460800
 UART7.IPParameters=BaudRate
-VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
-VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Mode=DSPOoLibraryJjLibrary
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.3.0_1.3.0
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
